k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: default
  labels:
    app: demo-api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: demo-api
